--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,3 +1,53 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+/* Nav */
+nav {
+    @apply 
+    bg-white 
+    w-full;
+}
+
+.nav-container {
+    @apply
+    max-w-7xl 
+    mx-auto 
+    px-2 
+    sm:px-6 
+    lg:px-8;
+}
+
+.nav-btn {
+    @apply text-xl bg-blue-400;
+} 
+
+.nav-link-active {
+    @apply 
+    border-green-500 
+    text-gray-900 
+    inline-flex 
+    items-center 
+    px-1 
+    pt-1 
+    border-b-2 
+    text-sm 
+    font-medium
+}
+
+.nav-link-inactive {
+    @apply 
+    border-transparent 
+    text-gray-500 
+    hover:border-gray-300 
+    hover:text-gray-700 
+    inline-flex 
+    items-center 
+    px-1 
+    pt-1 
+    border-b-2 
+    text-sm 
+    font-medium
+}
+
+@import "tailwindcss/utilities";
