--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -581,6 +581,10 @@ video {
 
 /* Nav */
 
+header {
+  z-index: 50;
+}
+
 nav {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
