--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -13,6 +13,20 @@ nav {
     w-full;
 }
 
+main {
+    @apply
+    mt-10 
+    mx-auto 
+    max-w-7xl 
+    px-4 
+    sm:mt-12 
+    sm:px-6 
+    md:mt-16 
+    lg:mt-20 
+    lg:px-8
+    xl:mt-20
+}
+
 .nav-container {
     @apply
     max-w-7xl 
