--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -591,6 +591,43 @@ nav {
   width: 100%;
 }
 
+main {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2.5rem;
+  max-width: 80rem;
+  padding-left: 1rem;
+  padding-right: 1rem
+}
+
+@media (min-width: 640px) {
+  main {
+    margin-top: 3rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    margin-top: 4rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  main {
+    margin-top: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  main {
+    margin-top: 5rem;
+  }
+}
+
 .nav-container {
   margin-left: auto;
   margin-right: auto;
