--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -72,4 +72,29 @@ main {
     font-medium
 }
 
+.loader,
+.loader-blue {
+  border-top-color: #2f80ed;
+  -webkit-animation: spinner 1.2s linear infinite;
+  animation: spinner 1.2s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @import "tailwindcss/utilities";
