--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -702,10 +702,28 @@ main {
   color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
+.charts {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  border-radius: 0.375rem;
+  height: 15rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 5rem;
+  position: absolute;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 15rem
+}
+
 .loader,
 .loader-blue {
   border-top-color: #2f80ed;
   animation: spinner 1.2s linear infinite;
+}
+
+body {
+  overflow: hidden;
 }
 
 @keyframes spinner {
